<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/ETInt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ETInt"
            android:numeric="integer"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/TVInt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/TvInt"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ETText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ETtext"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/TVText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/Tvtext"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/Switch3"
            android:textSize="20sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <EditText
            android:id="@+id/ETDouble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ETdouble"
            android:minHeight="48dp"
            android:numeric="decimal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TVDouble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/Tvdouble"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="120dp"
        android:text="@string/botton1"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="120dp"
        android:text="@string/botton2"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>